app/style/customstyle.css
.editable {
    display: block;
    max-width: 200px;
}

.ce,
#cec,
#cet {
    width: 100%;
    word-wrap: normal;
    overflow: hidden;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    font-size: 1.8rem;
    line-height: 1.5em;
    font-weight: 200;
    color: #3d4043;
    outline: none;
}

.ce pre,
#cec pre {
    white-space: pre-wrap;
    display: inline-block;
    margin-top: 10px;
    margin-bottom: 5px;
    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

#cet {
    font-size: 2.4rem;
}

#hidden_input_container {
    position: fixed;
    left: 0px;
    bottom: 0px;
    height: 10;
    width: 10;
    overflow: hidden;
    background-color: red;
}

#hidden_input {
    position: relative;
    left: 0px;
    top: 0px;
    width: 100;
    height: 10;
    padding: 0;
    border: 0;
    background-color: red;
}

input[type="checkbox"] {
    margin-right: 5px;
}

.ce pre,
#cec pre {
    margin-bottom: -5px;
    margin-top: 0px;
    padding-top: 2px;
    padding-right: 6px;
    padding-bottom: 2px;
    padding-left: 6px;
}
#footer {
    bottom: 0;
    position: fixed;
    width: 100%;
    height: 50px;
    background-color: yellowgreen;
}

